@@ -1,6 +1,10 @@
 5
 ===
+<<<<<<< .mine
 Added 'Clear' button (alexandre)
+=======
+Modifications on selection and gelection bounds (pekayatt)
+>>>>>>> .r96
 Added rainbow effect (andremossinato)
 Side number for regular polygon can be choosen (alexandre)
 New shape available: Heart (andremossinato)
